# CMPE-275-Project2

./: .gitignore  CMakeLists.txt  Makefile  README.md  run.sh
contrast/: openmp.cpp  seq.cpp
src/blur/: blur.cpp  cuda.cu  cuda_blur_ops.cu  cuda_blur_ops.h  cuda_performance_measure.cu  openmp.cpp  openmp_performance_measure.cpp  seq.cpp  seq_blur_ops.cpp  seq_blur_ops.h
src/contrast/: common.cu  cuda.cu  cuda_performance_measure.cu  openmp.cpp  openmp_performance_measure.cpp  seq.cpp
src/contrast/old/: cuda.cu  seq.cpp
src/contrast/sratch/: openmp_performance_measure.cpp
src/contrast/sratch/utils/: cude_contrast_ops.h  openmp_contrast_ops.h  seq_contrast_ops.h  utils.h
src/contrast/utils/: cude_contrast_ops.h  openmp_contrast_ops.h  seq_contrast_ops.h  utils.h
src/lib/: dirreader.h
src/sharpening/: cuda.cu  openmp.cpp  seq.cpp
